# legacy.cs.unibo.it

./: README.md
aaos/: AUTHORS  Makefile  README.md  TODO  config.mk
aaos/doc/: Doxyfile.template
aaos/include/: adt.h  arch.h  errno.h  init.h  io_event.h  kernel.h  libumps.h  math.h  msg.h  string.h  tcb.h  termio.h
aaos/src/: Makefile  io_event.c  kernel.c  msg.c  p1test.c  p2test.c  scheduler.c  string.c  tcb.c  termio.c
aaos/test/: Makefile  build_unexp.sh  queue_test.c  queue_test.unexp.c  smm_test.c  smm_test.unexp.c
knick_knack/: README.md
knick_knack/animazione/: Imakefile  Knick_Knack_Anim.ani  Knick_Knack_Anim.arg  Knick_Knack_Anim.c  Knick_Knack_Anim.sta  Knick_Knack_Anim0.arg  Knick_Knack_Anim0.md  Knick_Knack_Anim1.arg  Knick_Knack_Anim1.md  Knick_Knack_Anim10.arg  Knick_Knack_Anim10.md  Knick_Knack_Anim11.arg  Knick_Knack_Anim11.md  Knick_Knack_Anim12.arg  Knick_Knack_Anim12.md  Knick_Knack_Anim13.arg  Knick_Knack_Anim13.md  Knick_Knack_Anim14.arg  Knick_Knack_Anim14.md  Knick_Knack_Anim15.arg  Knick_Knack_Anim15.md  Knick_Knack_Anim16.arg  Knick_Knack_Anim16.md  Knick_Knack_Anim17.arg  Knick_Knack_Anim17.md  Knick_Knack_Anim18.arg  Knick_Knack_Anim18.md  Knick_Knack_Anim19.arg  Knick_Knack_Anim19.md  Knick_Knack_Anim2.arg  Knick_Knack_Anim2.md  Knick_Knack_Anim20.arg  (+86 more)
persp_cube2/: AUTHORS  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
persp_cube2/src/: Makefile.am  Makefile.in  main.c  mesh3d_load_m.c  mesh3d_load_obj.c
uplezz/: AUTHORS  Makefile  README.md  images.cc  main.cc  uplezz.cc
(+639 files in other folders)
